# edu-typeclasses

./: .gitignore  Pal.hs  README.md  main.hs
beginner crash course/palindrome/: main.hs
palindrome/: main.hs
validate/: validate.cabal
validate/src/: Main.hs
