name:                validate
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/DeCentN2Madness/edu-typeclasses#readme
-- license:
-- license-file:
author:              DeCentN2Madness
maintainer:          7983+DeCentN2Madness@users.noreply.github.com
-- copyright:
category:            Education
build-type:          Simple
cabal-version:       >=1.10
-- extra-source-files:

executable validate
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
